--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -2,7 +2,7 @@
   "lang": "zh",
   "start": "开始吧！",
   "normal": "普通模式",
-  "endless": "无尽龟潮",
+  "endless": "无尽涛吃",
   "practice": "练习生模式",
   "settings": "游戏设置",
   "img-before": "点击前图",
@@ -15,12 +15,12 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "吃掉小乌龟",
+  "eat-kano": "吃掉小涛吃",
   "default-dfjk": "默认为DFJK",
   "default": "想改时间？老老实实打去吧",
-  "game-title": "吃掉小乌龟",
+  "game-title": "吃掉小涛吃",
   "game-intro1": "从最底下的开始",
-  "game-intro2": "看你能吃几只龟",
+  "game-intro2": "看你能吃几个涛吃",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
   "time-up": "没时间了（悲）",
@@ -33,7 +33,7 @@
   "repo": "仓库",
   "text-level-1": "夯客头子?",
   "text-level-2": "普通夯客",
-  "text-level-3": "龟王",
+  "text-level-3": "涛吃王",
   "text-level-4": "您",
   "text-level-5": "人?",
   "time-over": "倒计时多了",
